# docs/swagger.json
@@ -16,7 +16,7 @@
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.0.0-1400/11/26"
+        "version": "1.0.0-1400/11/30"
     },
     "host": "localhost:5000",
     "basePath": "/",
@@ -103,7 +103,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.Person"
+                            "$ref": "#/definitions/dto.PersonDto"
                         }
                     }
                 ],
@@ -112,6 +112,68 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.AddPersonsResponseDto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "406": {
+                        "description": "Not Acceptable",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    }
+                }
+            }
+        },
+        "/person/find/{nationalCode}": {
+            "get": {
+                "description": "get the status of server.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "person api"
+                ],
+                "summary": "findPersonByNationalCode",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "nationalCode param",
+                        "name": "nationalCode",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.PersonDto"
                         }
                     },
                     "400": {
@@ -159,12 +221,83 @@
                 "tags": [
                     "person api"
                 ],
-                "summary": "find All person",
+                "summary": "findAllPerson",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.FindAllPersonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/person/update/{nationalCode}": {
+            "put": {
+                "description": "put the status of server.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "person api"
+                ],
+                "summary": "update person by nationalCode",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "nationalCode param",
+                        "name": "nationalCode",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "person body",
+                        "name": "personDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PersonDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdatePersonsResponseDto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "406": {
+                        "description": "Not Acceptable",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
+                        }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponseDto"
                         }
                     }
                 }
@@ -191,6 +324,12 @@
                 },
                 "text": {
                     "type": "string"
+                },
+                "validations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ValidationDto"
+                    }
                 }
             }
         },
@@ -223,6 +362,43 @@
                     "type": "string"
                 },
                 "firstname": {
+                    "description": "column name is `firstname`",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "lastname": {
+                    "description": "column name is `lastname`",
+                    "type": "string"
+                },
+                "mobile": {
+                    "type": "string"
+                },
+                "nationalCode": {
+                    "description": "column name is `nationalCode`",
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PersonDto": {
+            "type": "object",
+            "required": [
+                "age",
+                "email",
+                "firstname",
+                "lastname",
+                "mobile",
+                "nationalCode"
+            ],
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "firstname": {
                     "type": "string"
                 },
                 "lastname": {
@@ -232,6 +408,30 @@
                     "type": "string"
                 },
                 "nationalCode": {
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
+                }
+            }
+        },
+        "dto.UpdatePersonsResponseDto": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.ValidationDto": {
+            "type": "object",
+            "properties": {
+                "detailMessage": {
+                    "type": "string"
+                },
+                "fieldName": {
                     "type": "string"
                 }
             }
